Fix registry section alignment on mobile

--- a/main.css
+++ b/main.css
@@ -1707,9 +1707,6 @@ input[type=submit].link-button.blue:hover {
 	#wedding-party .party-person:nth-child(2n) {
 		margin-right: 0
 	}
-	#registry p {
-		text-align: left
-	}
 }
 
 @media screen and (min-width:768px) {
